# ai_sonification

./: .gitignore  README.md  api.py  image_caption.py  opencage_api.py  openweather_api.py  pyproject.toml  stableaudio_api.py  ui.py  weather_to_prompt.py
prompts/: image_caption.txt  weather_music_base.txt
